# WordChecker

./: .gitignore  CMakeLists.txt  README.md  input.txt  main.c
